--- a/booking.html
+++ b/booking.html
@@ -676,7 +676,7 @@
 
         .logo {
             height: 60px;
-            width: 60px;
+            width: auto;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -687,10 +687,9 @@
 
         .logo img {
             height: 60px;
-            width: 60px;
+            width: auto;
             max-width: 100%;
-            border-radius: 0;
-            object-fit: cover;
+            object-fit: contain;
         }
 
         .main-nav {
@@ -843,7 +842,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-            <img src="logo.jpg" alt="College Sports Hub Logo">
+            <img src="logo.png" alt="College Sports Hub Logo">
         </div>
         <ul class="main-nav" id="mainNav">
             <li><a href="index.html">Home</a></li>
@@ -854,7 +853,7 @@
             <li><a href="rules.html">Rules</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="details.html">Details</a></li>
-            <li><a href="#" onclick="logout()">Logout</a></li>
+            <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu(event)">
             <span></span>
