--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
 
         .toggle-links {
             text-align: center;
-            margin-top: 10px;
+            margin-top: 1z0px;
         }
 
         .toggle-links a {
