--- a/rules.html
+++ b/rules.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rules - College Sports Hub</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav.css">
     <script src="nav.js"></script>
     <script>
         function checkLogin() {
@@ -50,29 +51,20 @@
 
         .logo {
             height: 60px;
-            width: 60px;
+            width: auto;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-shrink: 0;
             margin-right: 10px;
-            background: white;
-            border-radius: 6px;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.04);
-            padding: 2px;
+            transition: none;
         }
 
         .logo img {
-            height: 100%;
-            width: 100%;
-            object-fit: contain;
-            border-radius: 4px;
-            background: white;
             height: 60px;
-            width: 60px;
+            width: auto;
             max-width: 100%;
-            border-radius: 0;
-            object-fit: cover;
+            object-fit: contain;
         }
 
         .main-nav {
@@ -386,71 +378,72 @@
     </style>
 </head>
 <body onload="checkLogin()">
-<nav>
-    <div class="logo">
-        <img src="logo.jpg" alt="College Sports Hub Logo">
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="logo">
+            <img src="logo.png" alt="College Sports Hub Logo">
+        </div>
+        <ul class="main-nav" id="mainNav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="booking.html">Slot Booking</a></li>
+            <li><a href="team.html">Find a Team</a></li>
+            <li><a href="tournaments.html">Tournaments</a></li>
+            <li><a href="rules.html" class="active">Rules</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="details.html">Details</a></li>
+            <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
+        </ul>
+        <div class="hamburger" onclick="toggleMenu(event)">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
+    <div id="nav-backdrop"></div>
+
+    <!-- Rules & Regulations Section -->
+    <div class="container">
+        <h1>Rules & Regulations</h1>
+        
+        <h2>1. General Court Rules</h2>
+        <ul>
+            <li>Only registered users are allowed to book a court.</li>
+            <li>Players must wear proper sports attire and  enter the court bare foot.</li>
+            <li>Food and drinks (except water) are not allowed inside the court.</li>
+            <li>Respect other players and avoid unnecessary disruptions.</li>
+        </ul>
+
+        <h2>2. Booking & Cancellation</h2>
+        <ul>
+            <li>Each player can book a maximum of one slot per day.</li>
+            <li>Bookings must be made at least 10 minutes before the slot starts.</li>
+            <li>If you cannot attend, cancel your booking at least 30 minutes before.</li>
+            <li>Repeated no-shows may lead to temporary suspension.</li>
+        </ul>
+
+        <h2>3. Gameplay Etiquette</h2>
+        <ul>
+            <li>Each match is limited to 60 minutes.</li>
+            <li>Follow fair play rules and resolve disputes amicably.</li>
+            <li>Bring your personal shuttles; it won't be provided.</li>
+        </ul>
+
+        <h2>4. Code of Conduct</h2>
+        <ul>
+            <li>Any kind of misconduct, violence, or disrespect  will result in an immediate ban.</li>
+            <li>Maintain a friendly sportsmanship spirit.</li>
+            <li>Follow the guidance of the court staff at all times.</li>
+            <li> DO not use Cell phone </li>
+            <li> You are under CC TV surveillance </li>
+        <li> No shouting </li>
+            <li>  No Group sitting and disturbing </li>
+               <li> No Bettings
+                </li>
+        </ul>
+
+        <a href="index.html" class="btn">Back to Home</a>
     </div>
-    <ul class="main-nav" id="mainNav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="booking.html">Slot Booking</a></li>
-        <li><a href="team.html">Find a Team</a></li>
-        <li><a href="tournaments.html">Tournaments</a></li>
-        <li><a href="rules.html" class="active">Rules</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="details.html">Details</a></li>
-        <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
-    </ul>
-    <div class="hamburger" onclick="toggleMenu(event)">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-</nav>
-<div id="nav-backdrop"></div>
-
-<!-- Rules & Regulations Section -->
-<div class="container">
-    <h1>Rules & Regulations</h1>
-    
-    <h2>1. General Court Rules</h2>
-    <ul>
-        <li>Only registered users are allowed to book a court.</li>
-        <li>Players must wear proper sports attire and  enter the court bare foot.</li>
-        <li>Food and drinks (except water) are not allowed inside the court.</li>
-        <li>Respect other players and avoid unnecessary disruptions.</li>
-    </ul>
-
-    <h2>2. Booking & Cancellation</h2>
-    <ul>
-        <li>Each player can book a maximum of one slot per day.</li>
-        <li>Bookings must be made at least 10 minutes before the slot starts.</li>
-        <li>If you cannot attend, cancel your booking at least 30 minutes before.</li>
-        <li>Repeated no-shows may lead to temporary suspension.</li>
-    </ul>
-
-    <h2>3. Gameplay Etiquette</h2>
-    <ul>
-        <li>Each match is limited to 60 minutes.</li>
-        <li>Follow fair play rules and resolve disputes amicably.</li>
-        <li>Bring your personal shuttles; it won't be provided.</li>
-    </ul>
-
-    <h2>4. Code of Conduct</h2>
-    <ul>
-        <li>Any kind of misconduct, violence, or disrespect  will result in an immediate ban.</li>
-        <li>Maintain a friendly sportsmanship spirit.</li>
-        <li>Follow the guidance of the court staff at all times.</li>
-        <li> DO not use Cell phone </li>
-        <li> You are under CC TV surveillance </li>
-    <li> No shouting </li>
-        <li>  No Group sitting and disturbing </li>
-           <li> No Bettings
-            </li>
-    </ul>
-
-    <a href="index.html" class="btn">Back to Home</a>
-</div>
 </body>
 </html>
 
