--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,8 @@
 <!-- Navigation Bar -->
 <nav>
-    <div class="logo">
-        <span>College</span>
-        <span>Sports</span>
-        <span>Hub</span>
+     <div class="logo">
+            <img src="logo.png" alt="College Sports Hub Logo">
+        </div>
     </div>
     <ul class="main-nav" id="mainNav">
         <li><a href="index.html">Home</a></li>
