--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <!-- Navigation Bar -->
 <nav>
      <div class="logo">
-            <img src="logo.png" alt="College Sports Hub Logo">
+            <img src="logo.jpg" alt="College Sports Hub Logo">
         </div>
     </div>
     <ul class="main-nav" id="mainNav">
