--- a/rules.html
+++ b/rules.html
@@ -381,7 +381,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-            <img src="logo.png" alt="College Sports Hub Logo">
+            <img src="logo.jpg" alt="College Sports Hub Logo">
         </div>
         <ul class="main-nav" id="mainNav">
             <li><a href="index.html">Home</a></li>
