--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
             position: relative;
             z-index: 1000;
             box-shadow: none;
+            width: 100%;
         }
 
         .logo {
@@ -315,6 +316,18 @@
             padding: 0;
             flex-shrink: 0;
             align-items: center;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+        }
+
+        .main-nav::-webkit-scrollbar {
+            display: none;
+        }
+
+        .main-nav li {
+            flex: 0 0 auto;
         }
 
         .main-nav a {
@@ -438,49 +451,25 @@
                 height: auto !important;
                 min-height: auto !important;
                 padding: 0.5rem;
-                position: fixed;
-                top: 0;
-                left: 0;
-                right: 0;
-                background-color: #0a2342;
             }
             .logo {
                 margin-bottom: 0.5rem;
             }
             .main-nav {
                 width: 100%;
-                overflow-x: auto;
-                overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
                 padding: 0.5rem 0;
                 justify-content: flex-start;
                 gap: 0.2rem;
-                scrollbar-width: none;
-                -ms-overflow-style: none;
-                white-space: nowrap;
-                display: flex;
-                flex-wrap: nowrap;
-            }
-            .main-nav::-webkit-scrollbar {
-                display: none;
-            }
-            .main-nav li {
-                flex: 0 0 auto;
-                display: inline-block;
             }
             .main-nav a {
                 padding: 0.5rem 0.8rem;
                 font-size: 0.95rem;
                 background-color: transparent;
                 border-radius: 12px;
-                display: inline-block;
             }
             .main-nav a:hover, .main-nav a.active {
                 background-color: #17335c;
                 color: #e0e6ed;
-            }
-            body {
-                padding-top: 120px; /* Increased padding to account for fixed nav */
             }
         }
 
@@ -587,22 +576,18 @@
             let startX;
             let scrollLeft;
 
-            // Mouse events
             nav.addEventListener('mousedown', (e) => {
                 isDown = true;
-                nav.style.cursor = 'grabbing';
                 startX = e.pageX - nav.offsetLeft;
                 scrollLeft = nav.scrollLeft;
             });
 
             nav.addEventListener('mouseleave', () => {
                 isDown = false;
-                nav.style.cursor = 'grab';
             });
 
             nav.addEventListener('mouseup', () => {
                 isDown = false;
-                nav.style.cursor = 'grab';
             });
 
             nav.addEventListener('mousemove', (e) => {
@@ -618,12 +603,10 @@
                 isDown = true;
                 startX = e.touches[0].pageX - nav.offsetLeft;
                 scrollLeft = nav.scrollLeft;
-                nav.style.cursor = 'grabbing';
             });
 
             nav.addEventListener('touchend', () => {
                 isDown = false;
-                nav.style.cursor = 'grab';
             });
 
             nav.addEventListener('touchmove', (e) => {
@@ -633,17 +616,7 @@
                 const walk = (x - startX) * 2;
                 nav.scrollLeft = scrollLeft - walk;
             });
-
-            // Add touch-action CSS property
-            nav.style.touchAction = 'pan-x';
-            nav.style.cursor = 'grab';
         });
     </script>
 </body>
 </html>
-
-
-
-
-
-
