--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@
             position: relative;
             z-index: 1000;
             box-shadow: none;
-            width: 100%;
         }
 
         .logo {
@@ -316,18 +315,6 @@
             padding: 0;
             flex-shrink: 0;
             align-items: center;
-            overflow-x: auto;
-            -webkit-overflow-scrolling: touch;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-        }
-
-        .main-nav::-webkit-scrollbar {
-            display: none;
-        }
-
-        .main-nav li {
-            flex: 0 0 auto;
         }
 
         .main-nav a {
@@ -457,9 +444,22 @@
             }
             .main-nav {
                 width: 100%;
+                overflow-x: scroll;
+                overflow-y: hidden;
+                -webkit-overflow-scrolling: touch;
                 padding: 0.5rem 0;
                 justify-content: flex-start;
                 gap: 0.2rem;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+                display: flex;
+                flex-wrap: nowrap;
+            }
+            .main-nav::-webkit-scrollbar {
+                display: none;
+            }
+            .main-nav li {
+                flex: 0 0 auto;
             }
             .main-nav a {
                 padding: 0.5rem 0.8rem;
@@ -576,18 +576,22 @@
             let startX;
             let scrollLeft;
 
+            // Mouse events
             nav.addEventListener('mousedown', (e) => {
                 isDown = true;
+                nav.style.cursor = 'grabbing';
                 startX = e.pageX - nav.offsetLeft;
                 scrollLeft = nav.scrollLeft;
             });
 
             nav.addEventListener('mouseleave', () => {
                 isDown = false;
+                nav.style.cursor = 'grab';
             });
 
             nav.addEventListener('mouseup', () => {
                 isDown = false;
+                nav.style.cursor = 'grab';
             });
 
             nav.addEventListener('mousemove', (e) => {
@@ -616,6 +620,9 @@
                 const walk = (x - startX) * 2;
                 nav.scrollLeft = scrollLeft - walk;
             });
+
+            // Set initial cursor style
+            nav.style.cursor = 'grab';
         });
     </script>
 </body>
