--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@
             position: relative;
             z-index: 1000;
             box-shadow: none;
-            width: 100%;
         }
 
         .logo {
@@ -439,47 +438,35 @@
                 height: auto !important;
                 min-height: auto !important;
                 padding: 0.5rem;
-                position: sticky;
-                top: 0;
             }
             .logo {
                 margin-bottom: 0.5rem;
             }
             .main-nav {
                 width: 100%;
-                overflow-x: scroll;
-                overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                padding: 0.5rem 0;
-                justify-content: flex-start;
-                gap: 0.2rem;
-                scrollbar-width: none;
-                -ms-overflow-style: none;
                 display: flex;
                 flex-wrap: nowrap;
-                position: relative;
-                z-index: 1001;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+                padding: 0.5rem 0;
+                margin: 0;
+                gap: 0.2rem;
             }
             .main-nav::-webkit-scrollbar {
                 display: none;
             }
             .main-nav li {
                 flex: 0 0 auto;
-                display: inline-block;
             }
             .main-nav a {
                 padding: 0.5rem 0.8rem;
                 font-size: 0.95rem;
                 background-color: transparent;
                 border-radius: 12px;
-                display: inline-block;
             }
             .main-nav a:hover, .main-nav a.active {
                 background-color: #17335c;
                 color: #e0e6ed;
-            }
-            body {
-                padding-top: 0;
             }
         }
 
@@ -583,28 +570,24 @@
                 }
             });
 
-            // Add smooth scrolling to navigation
+            // Simple touch scrolling for mobile
             const nav = document.querySelector('.main-nav');
             let isDown = false;
             let startX;
             let scrollLeft;
 
-            // Mouse events
             nav.addEventListener('mousedown', (e) => {
                 isDown = true;
-                nav.style.cursor = 'grabbing';
                 startX = e.pageX - nav.offsetLeft;
                 scrollLeft = nav.scrollLeft;
             });
 
             nav.addEventListener('mouseleave', () => {
                 isDown = false;
-                nav.style.cursor = 'grab';
             });
 
             nav.addEventListener('mouseup', () => {
                 isDown = false;
-                nav.style.cursor = 'grab';
             });
 
             nav.addEventListener('mousemove', (e) => {
@@ -615,7 +598,7 @@
                 nav.scrollLeft = scrollLeft - walk;
             });
 
-            // Touch events for mobile
+            // Touch events
             nav.addEventListener('touchstart', (e) => {
                 isDown = true;
                 startX = e.touches[0].pageX - nav.offsetLeft;
@@ -633,9 +616,6 @@
                 const walk = (x - startX) * 2;
                 nav.scrollLeft = scrollLeft - walk;
             });
-
-            // Set initial cursor style
-            nav.style.cursor = 'grab';
         });
     </script>
 </body>
